# evemap

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  tox.ini
docs/: index.md  spatial.md
evemap/: __init__.py  api.py  app_settings.py  apps.py  auth_hooks.py
evemap/management/commands/: generate_geospatial.py
evemap/static/evemap/frontend/assets/: index-DQAwHDEy.js  index-ENRWoX7g.js
evemap/static/evemap/geospatial/: region_stargates_lines.geojson  solar_systems.geojson  stargates_lines.geojson
evemap/templates/evemap/: index.html
evemap/templatetags/: render_vite_bundle.py
evemap/utils/: geospatial.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FeatureInfo.tsx  MapView.tsx  RegionPlanView.tsx  RegionView.tsx
frontend/src/contexts/: FeatureContext.tsx
frontend/src/lib/: createLayerRegion.ts  createLayerRegionPlan.ts  createLayerRegions.ts  createLayerSolarSystems.ts  createLayerStargates.ts  createStyleRegion.ts  createStyleRegions.ts  createStyleSolarSystems.ts  createStyleStargates.ts  eveProjection.ts
testauth/settings_aa3/: base.py  local.py
testauth/settings_aa4/: base.py  local.py
